# rfsom-box-gui

./: .gitignore  README.md  app.h  appgenericlist.cpp  appgenericlist.h  apppage.cpp  apppage.h  appvideoplayer.cpp  appvideoplayer.h  blueScorpionApp.pro  buttonElement.ui  buttonelementui.cpp  buttonelementui.h  checkboxElement.ui  checkboxelementui.cpp  checkboxelementui.h  editboxelementui.cpp  editboxelementui.h  enumelementui.cpp  hardware.h  ipaddresselementui.cpp  ipaddresselementui.h  landing.json  landingpage.cpp  landingpage.h  launcher.json  launcherpage.cpp  launcherpage.h  main.cpp  main.json  mainmenu.cpp  mainmenu.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  menupage.cpp  menupage.h  numericelementui.h  readonlyelementui.cpp  readonlyelementui.h  (+8 more)
fft-plot/: CMakeLists.txt  basic_font.h  basic_graph.c  basic_graph.h  main.c
resources/: res.qrc
src/: app.cpp  app.h  appgenericlist.cpp  appvideoplayer.cpp  appvideoplayer.h  buttonelementui.cpp  buttonelementui.h  checkboxelementui.cpp  checkboxelementui.h  common.cpp  common.h  editboxelementui.cpp  editboxelementui.h  enumelementui.cpp  enumelementui.h  ipaddresselementui.cpp  landingpage.cpp  landingpage.h  launcherpage.cpp  launcherpage.h  main.cpp  mainmenu.cpp  mainmenu.h  numericelementui.cpp  numericelementui.h  readonlyelementui.cpp  scriptresult.cpp  scriptresult.h  stringvalue.h  sysfsvalue.h  toastnotification.h  uielement.h
tun_tap/: Makefile  cfg_modem.sh  client_netcat.sh  en_dds.sh  en_dma.sh  en_macsec.sh  en_radio.sh  ip_monitor.c  ip_reg.c  ip_reg_default.sh  kill_modem.sh  mac.c  (+6 more)
(+27 files in other folders)
